# openlut

./: CMakeLists.txt  CPU_inference.py  GPU_inference.py  README.md
cpp/: lut.hpp
